--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,28 @@
 * {
   box-sizing: border-box;
 }
+
 html {
   height: 100%;
   scroll-behavior: smooth;
 }
+
 body {
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 100vh auto auto auto auto 50px;
   margin: 0;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
 }
+
 header {
   color: #fff;
   text-align: center;
-  background: linear-gradient(180deg, #5F5F5F, #232323);
+  background: linear-gradient(90deg, #5f5f5f, #232323);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
 }
+
 header > div {
   height: 100%;
   position: relative;
@@ -25,37 +31,47 @@ header > div {
   justify-content: center;
   align-items: center;
 }
+
 .title {
   font-size: 2.2rem;
   margin: 5px 0;
   text-shadow: 1px 2px 30px black;
 }
+
 .subtitle {
   font-weight: 300;
   margin: 0;
   font-size: 1.4rem;
   text-shadow: 1px 2px 30px black;
 }
+
 .social-media {
   padding: 0;
 }
+
 .social-media li {
   margin: 0 10px;
   display: inline-block;
 }
-.social-media i, .slide-anchor {
+
+.social-media i,
+.slide-anchor {
   color: #fff;
   font-size: 30px;
   transition: all 0.2s ease;
 }
-.social-media i:hover, .slide-anchor:hover {
-  color: #8578B4;
+
+.social-media i:hover,
+.slide-anchor:hover {
+  color: #8578b4;
 }
+
 .slide-anchor {
   position: absolute;
   bottom: 20px;
   left: calc(50% - 11px);
 }
+
 section:nth-of-type(odd) {
   padding-top: 50px;
   margin: 0px 10vw 50px 10vw;
@@ -68,16 +84,19 @@ section:nth-of-type(odd) {
   text-align: center;
   line-height: 2rem;
 }
+
 section:nth-of-type(odd) h2 {
   margin-top: 0;
-  font-size: 2.0rem;
+  font-size: 2rem;
   border-bottom: solid 5px #444444;
   color: #232323;
   transition: all 0.2s ease;
 }
+
 section:nth-of-type(odd) p {
   margin-bottom: 10px;
 }
+
 section:nth-of-type(even) {
   display: flex;
   background-color: #f5f5f5;
@@ -89,20 +108,24 @@ section:nth-of-type(even) {
   text-align: center;
   line-height: 2rem;
 }
+
 section:nth-of-type(even) h2 {
   margin-top: 50px;
   align-self: center;
-  font-size: 2.0rem;
+  font-size: 2rem;
   border-bottom: solid 5px #444444;
   color: #232323;
   transition: all 0.2s ease;
 }
+
 #skills p {
   margin: 1em 10vw 0 10vw;
 }
+
 .skills-list {
   margin: 20px 10vw 10px 10vw;
 }
+
 .skills-list ul {
   list-style: none;
   padding: 0;
@@ -110,11 +133,12 @@ section:nth-of-type(even) h2 {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-  align-content:space-around;
+  align-content: space-around;
   align-items: space-around;
   margin: 0;
   text-align: center;
 }
+
 .skills-list li {
   margin: 10px 10px;
   font-weight: 700;
@@ -127,11 +151,13 @@ section:nth-of-type(even) h2 {
   user-select: none;
   width: 120px;
 }
+
 .skills-list li:hover {
-  background-color: #65559B;
+  background-color: #65559b;
 }
+
 .btn-portfolio {
-  border: 3px solid #8578B4;
+  border: 3px solid #8578b4;
   margin: 20px;
   font-weight: 700;
   background-color: #444444;
@@ -142,10 +168,12 @@ section:nth-of-type(even) h2 {
   user-select: none;
   text-decoration: none;
 }
+
 .btn-portfolio:hover {
-  border: 3px solid #8578B4;
-  background-color: #65559B;
+  border: 3px solid #8578b4;
+  background-color: #65559b;
 }
+
 .cards-group {
   padding-top: 20px;
   margin: 10px 10vw;
@@ -153,6 +181,7 @@ section:nth-of-type(even) h2 {
   flex-direction: row;
   justify-content: space-around;
 }
+
 .card {
   margin: 0 10px;
   padding: 20px;
@@ -163,27 +192,33 @@ section:nth-of-type(even) h2 {
   width: 300px;
   transition: all 0.2s ease;
 }
+
 .card:hover {
   transform: scale(1.048);
   background-color: #564592;
 }
+
 .card img {
   width: 100px;
 }
+
 .card h3 {
   padding-bottom: 10px;
   border-bottom: solid 2px #e9e9e9;
   margin-bottom: 0;
 }
+
 .card p {
   font-size: 1.1rem;
   font-weight: 300;
   margin-bottom: 0;
 }
+
 footer {
   position: relative;
   background: #232323;
 }
+
 footer div {
   height: 100%;
   display: flex;
@@ -193,60 +228,90 @@ footer div {
   text-align: center;
   margin: 0 20px;
 }
-footer p, footer a{
+
+footer p,
+footer a {
   z-index: 105;
   margin: 0;
   color: #fff;
   text-decoration: none;
 }
+
 footer a {
   font-weight: 700;
   transition: all 0.2s ease;
 }
+
 footer a:hover {
-  color: #8578B4;
+  color: #8578b4;
 }
+
 footer i {
   font-size: 0.9rem;
   color: #e46060;
 }
 
 section h2.section-hover {
-  border-bottom: solid 5px #65559B;
+  border-bottom: solid 5px #65559b;
 }
 
+/* Scroll styles */
 ::-webkit-scrollbar {
   width: 5px;
   height: 5px;
 }
+
 ::-webkit-scrollbar-button {
   width: 0px;
   height: 0px;
 }
+
 ::-webkit-scrollbar-thumb {
   background: #65559b;
   border: 0;
 }
+
 ::-webkit-scrollbar-thumb:hover {
   background: #65559b;
 }
+
 ::-webkit-scrollbar-thumb:active {
   background: #65559b;
 }
+
 ::-webkit-scrollbar-track {
   background: #cfcfcf;
   border: 0;
 }
+
 ::-webkit-scrollbar-track:hover {
   background: #cfcfcf;
 }
+
 ::-webkit-scrollbar-track:active {
   background: #cfcfcf;
 }
+
 ::-webkit-scrollbar-corner {
   background: transparent;
 }
 
+/* Header gradient animation */
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 0%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+/* Responsive layout */
 @media (max-width: 765px) {
   .cards-group {
     padding-top: 10px;
@@ -254,6 +319,7 @@ section h2.section-hover {
     justify-content: center;
     align-items: center;
   }
+
   .card {
     margin: 10px 0px;
     width: 100%;
